Fix misaligned time display in videos

--- a/source/_assets/sass/_video.scss
+++ b/source/_assets/sass/_video.scss
@@ -55,4 +55,7 @@ section.video {
 		content: "";
 	}
 
+	.video-js .vjs-time-control {
+		line-height: 3em;
+	}
 }
